  * setup-packaging-environment, setup.py, debian/copyright, debian/control:
     - Add a new script, setup-packaging-environment.

  [ Luca Falavigna ]
  * ubuntutools/requestsync/lp.py: explicitly import exceptions for
    backward compatibility with Python 2.5.
  * debian/control: re-enable support for python2.5.
  * debian/copyright: update copyright holders.

 -- Luca Falavigna <dktrkranz@debian.org>  Sun, 01 Nov 2009 15:58:08 +0100

ubuntu-dev-tools (0.81) karmic; urgency=low

  [ Iain Lane ]
  * requestsync: Give an error message if no changelog entries - happens if,
    for example, the new package's changelog hasn't yet been published on p.d.o
  * update-maintainer: Also check if package is in experimental when looking
    who to update maintainer to. 
  * update-maintainer: Prefer updating control.in to control; this is used by
    some Debian packages, notably those maintained by pkg-gnome.
  * debian/control: Update standards-version to 3.8.3, no changes
  * debian/control, debian/pyversions: Remove XS-Python version to
    debian/pyversions to silence a warning

  [ Jonathan Davies ]
  * debian/control: Included a short description of each script (LP: #406658).

  [ Nathan Handler ]
  * debian/control: Mention pull-revu-source in description

  [ Joe Bernard ]
  * Launchpad API changed causing pull-lp-source to fail to parse the .dsc
    file from the URL contents (LP: #436006).

 -- Iain Lane <laney@ubuntu.com>  Fri, 25 Sep 2009 20:20:49 +0100

ubuntu-dev-tools (0.80) karmic; urgency=low

  * mk-sbuild-lv: Export http_proxy. LP: #416438
   
 -- Michael Terry <michael.terry@canonical.com>  Thu, 10 Sep 2009 10:53:30 -0400

ubuntu-dev-tools (0.79) karmic; urgency=low

  * Add lp-project-upload: Upload a release tarball to a Launchpad project.
  * Add doc/lp-project-upload.1: Corresponding manpage.
  * setup.py: Add lp-project-upload.
  * debian/copyright: Add lp-project-upload.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 05 Sep 2009 16:42:10 +0200
